# karaoke-scheduler

backend/: Cargo.toml
backend/migrations/: 20241018224336_init.sql
backend/src/: main.rs
frontend/: bun.lockb  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/lib/: websocket.ts
