[package]
name = "karaoke-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-typed-websockets = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
